kustomize/bases/pr-pipeline-config/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gh-pr
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: gh-pr
spec:
  to:
    kind: Service
    name: el-gh-pr
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ""
  port:
    targetPort: http-listener
